--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title> Welcome </title>
 	</head>
 	<body>
-       
-		<h1> Ramdan kareem </h1>
+		<h1><font color = "red"> Ramdan kareem </font> </h1>
+
 	</body>
 </html>
